--- a/Binary/Properties/Configurations.settings
+++ b/Binary/Properties/Configurations.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DarkTheme" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="PassPassed" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
