--- a/Binary/Binary.csproj
+++ b/Binary/Binary.csproj
@@ -12,6 +12,10 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\ILWrapper\ILWrapper\ILWrapper.csproj" />
     <ProjectReference Include="..\..\Nikki\Nikki\Nikki.csproj" />
