Removed Endscript namespace, added Endscript project; rearranged some methods

--- a/Binary/Binary.csproj
+++ b/Binary/Binary.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Endscript\Endscript\Endscript.csproj" />
     <ProjectReference Include="..\..\ILWrapper\ILWrapper\ILWrapper.csproj" />
     <ProjectReference Include="..\..\Nikki\Nikki\Nikki.csproj" />
   </ItemGroup>
