Added Combo prompt winform.

--- a/Binary/Binary.csproj
+++ b/Binary/Binary.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Prompt\Combo.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Configurations.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
