Changed modder password. Version pushed to 2.0.7

--- a/Binary/Binary.csproj
+++ b/Binary/Binary.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>binary.ico</ApplicationIcon>
+    <Version>2.0.7</Version>
+    <Authors>MaxHwoy</Authors>
+    <Description>Tool for editing Need for Speed binary files (.BIN, .BUN, .LZC).</Description>
+    <Copyright>Copyright (c) 2020 MaxHwoy</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
