--- a/Binary/Binary.csproj
+++ b/Binary/Binary.csproj
@@ -5,10 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>binary.ico</ApplicationIcon>
-    <Version>2.0.7</Version>
+    <Version>2.1.0</Version>
     <Authors>MaxHwoy</Authors>
     <Description>Tool for editing Need for Speed binary files (.BIN, .BUN, .LZC).</Description>
-    <Copyright>Copyright (c) 2020 MaxHwoy</Copyright>
+    <Copyright>Copyright © 2020 MaxHwoy</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -24,6 +24,12 @@
     <ProjectReference Include="..\..\Endscript\Endscript\Endscript.csproj" />
     <ProjectReference Include="..\..\ILWrapper\ILWrapper\ILWrapper.csproj" />
     <ProjectReference Include="..\..\Nikki\Nikki\Nikki.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CoreExtensions">
+      <HintPath>..\..\Nikki\Nikki\CoreExtensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
