Adding sub-modules required for building

--- a/Binary/Binary.csproj
+++ b/Binary/Binary.csproj
@@ -23,9 +23,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Endscript\Endscript\Endscript.csproj" />
-    <ProjectReference Include="..\..\ILWrapper\ILWrapper\ILWrapper.csproj" />
-    <ProjectReference Include="..\..\Nikki\Nikki\Nikki.csproj" />
+    <ProjectReference Include="..\ext\Endscript\Endscript\Endscript.csproj" />
+    <ProjectReference Include="..\ext\ILWrapper\ILWrapper\ILWrapper.csproj" />
+    <ProjectReference Include="..\ext\Nikki\Nikki\Nikki.csproj" />
   </ItemGroup>
 
   <ItemGroup>
